--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>this project is developed by hyderabad developer</h1>
+    <h1>modify by banglore developer</h1>
+    <h1>added some text file</h1>
 </body>
 </html>
